# map-reduce

./: CMakeLists.txt  README.md  main.py  map.py  reduce.py  requirements.txt  setup.py
src/cpp/: mapper.cpp  reducer.cpp
src/python/: main.py  map.py  reduce.py
